remove {Empty} and similar + move from isEmpty to isBlank